# telepresenceRobot

./: .gitignore  .gittrees  README.md
android/: .gitignore  AndroidManifest.xml  build.xml  local.properties
client/: .gitignore
docs/: blockDiagram.odg
firmware/: CMakeLists.txt  android.c  android.h  battery_voltage.c  battery_voltage.h  build.sh  debug.c  debug.h  hw_config.c  hw_config.h  interrupts.c  main.c  motor.c  motor.h  openocd.cfg  platform_config.c  platform_config.h  ring_buffer.c  ring_buffer.h  status_led.c  status_led.h  stm32_it.c  stm32f10x_conf.h  time.c  time.h  upload.sh  usb.c  usb.h  usb_conf.h  usb_desc.c  usb_endp.c  usb_istr.c  usb_prop.c  usb_pwr.c  util.c  util.h
firmware/test/: ring_buffer_test.c
hardware/: android.sch  main.cmp  main.kicad_pcb  main.lib  main.net  main.pro  main.sch  motorController.cmp  motorController.kicad_pcb  motorController.net  motorController.pro  motorController.sch  motorController_v1.gvp  motorController_v2.gvp  motorControllers.sch  power.sch  saveModChanges.sh  telepresenceRobot.dcm  telepresenceRobot.lib  telepresenceRobot.mod  telepresenceRobotNew.mod  telepresenceRobotNew.mod.list  telepresenceRobot_v1.gvp  updateModFromLibrary.sh  userFavorites-deci-mils.mod  userFavorites-mm.mod  userFavorites.dcm  userFavorites.lib
mechanical/: 2834T190-Threaded-Stem Swivel Caster.STEP  2834T190-Threaded-Stem Swivel Caster.ipt  90973A120-Stainless Steel Tee Nut.STEP  90973A120-Stainless Steel Tee Nut.ipt  BatteryLatch-Latch.ipt  BatteryLatch-Lower.ipt  BatteryLatch-Outer.ipt  BatteryLatch-Spring.ipt  BatteryLatch.iam  CircuitBoard.ipt  Ground.ipt  HD-BK-IG-MotorBracket.ipt  HD-BK-IG.ipt  Human_5ft_9in.ipt  IG32P-Motor.ipt  MainAssembly.iam  MotorShroud.ipt  MotorWheelAssembly.iam  Nexus7.ipt  Robot-Base-BatteryBack.ipt  Robot-Base-Mast-Support.ipt  Robot-Base-Support.ipt  Robot-Battery-Rails.ipt  Robot-Lower-Base.idw  Robot-Lower-Base.ipt  Robot-Mast.ipt  Robot-Upper-Base.ipt  Servo-Horn.STEP  Servo-Horn.ipt  Servo.STEP  Servo.ipt  ServoMount.ipt  T80H-SM61-WheelHub.ipt  T80H-SM61.ipt  T80P-494BO-HS6-Wheel.ipt  T80P-494BO-HS6.ipt  TB1230-Battery.ipt  TB1240-Battery.ipt  TB1272-Battery.ipt  TableMount-Base.ipt  (+10 more)
(+79 files in other folders)
